Adding fixes after full test across all APIs
